--- a/shop/templates/main/base.html
+++ b/shop/templates/main/base.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">PyShop</a>
+        <a class="navbar-brand" href="#">Магазин</a>
     </div>
 </nav>
 <div class="container">
