--- a/shop/templates/HTML/index.html
+++ b/shop/templates/HTML/index.html
@@ -1,5 +1,8 @@
 {% load static %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<meta charset="utf-8">
+<link href="{% static "bootstrap/css/bootstrap-responsive.css" %}" rel="stylesheet">
+<script src="{% static "bootstrap/js/bootstrap.js" %}"></script>
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en" xml:lang="en" xmlns:fb="">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -28,8 +31,8 @@
       <div id="system_navigation" class="s_nav">
         <ul class="s_list_1 clearfix">
           <li><a href="{% url 'home' %}">Главное меню</a></li>
-{#          <li><a href="{% url 'register' %}">Регистрация</a></li>#}
-{#         <li><a href="{% url 'login' %}">Вход</a></li>
+              <li><a href="{% url 'register' %}">Регистрация</a></li>
+              <li><a href="{% url 'login' %}">Вход</a></li>
         </ul>
       </div>
 
@@ -62,19 +65,19 @@
       
     </div>
   </div>
-  <!-- end of header --> 
+  <!-- end of header -->    n
 
   
     <!-- ********************** -->
   <!--      C O N T E N T     --> 
   <!-- ********************** --> 
   <div id="content" class="container_12">
-  
+  {% block main %}
+  {% endblock %}
     <div id="welcome" class="grid_12">
       <h2>Приветстиве</h2>
       <p> <a href="">Название</a> Описание магазина</p>
-        {% block main %}
-        {% endblock %}
+
           </div>
     
     <div class="clear"></div>
