Реали Вход\выход Добавлен email регистр

--- a/shop/templates/HTML/index.html
+++ b/shop/templates/HTML/index.html
@@ -31,8 +31,14 @@
       <div id="system_navigation" class="s_nav">
         <ul class="s_list_1 clearfix">
           <li><a href="{% url 'home' %}">Главное меню</a></li>
+            {% if request.user.is_authenticated %}
+                <li>Добро пожаловать</li>
+                <li>{{ user.username }} </li>
+                <li><a href="{% url 'logout' %}">Выход</a></li>
+            {% else %}
               <li><a href="{% url 'register' %}">Регистрация</a></li>
               <li><a href="{% url 'login' %}">Вход</a></li>
+            {% endif %}
         </ul>
       </div>
 
