--- a/registers/templates/registration/login.html
+++ b/registers/templates/registration/login.html
@@ -1,9 +1,11 @@
 {% extends  'HTML/index.html' %}
 <html lang="en">
-<head>
-    <title>Логин</title>
-</head>
 <body>
-
-</body>
+{% block main %}
+<h1>Вход</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+    <button type="submit" class="btn btn-primary btn-block">войти</button></body>
+{% endblock %}
 </html>
