--- a/shop/templates/HTML/index.html
+++ b/shop/templates/HTML/index.html
@@ -27,7 +27,7 @@
 
       <div id="system_navigation" class="s_nav">
         <ul class="s_list_1 clearfix">
-            {# <li><a href="{% url 'add' %}">Добавить товар</a></li> #}
+            {# <li><a href="{% url 'cart_detail' %}">корзина</a></li>  #}
           <li><a href="{% url 'home' %}">Главное меню</a></li>
             {% if request.user.is_authenticated %}
                 <li>Добро пожаловать</li>
@@ -95,7 +95,7 @@
                 <h3><a href="{% url 'shop' %}">{{ i.name }}</a></h3>
                 <p class="s_model">Product 4</p>
                 <p class="s_price s_promo_price"><span class="s_old_price"><span class="s_currency s_before">$</span>{{ i.price }}</span><span class="s_currency s_before">$</span>{{ i.price }}</p>
-                <a class="s_button_add_to_cart" href="{% url 'shop' %}"><span class="s_icon_16"><span class="s_icon"></span>Add to Cart</span></a>
+                <a class="s_button_add_to_cart" href="{#{% url 'HTML/detail.html' %}#}"><span class="s_icon_16"><span class="s_icon"></span>Add to Cart</span></a>
                 </div>
             {% endfor %}
           </div>
